<resources>

    <string name="app_name">Ultistats</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hello_world">noob555</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="game_setup">Game Setup</string>
    <string name="tournament_setup">Tournament Setup</string>
    <string name="title_activity_take_stats">TakeStatsActivity</string>
    <string name="title_activity_view_player_list">Player List</string>
    <string name="title_activity_view_player">View Player</string>
    <string name="button_take_stats">Take Stats</string>
    <string name="button_view_stats">View Stats</string>
    <string name="button_manage_players_groups">Manage People / Groups</string>
    <string name="tournament">Tournament</string>
    <string name="game_name">Name</string>
    <string name="hint_game_name">Team1 vs. Team2</string>
    <string name="game_to">Game To</string>
    <string name="game_submit">Start Game</string>
    <string name="tournament_name">Name</string>
    <string name="scoring_team">Team to Score</string>
    <string name="hint_scoring_team">e.g. Columbia A</string>
    <string name="tournament_date">Start Date</string>
    <string name="hint_tournament_date">Form mm/dd/yy</string>
    <string name="tournament_submit">Create Tournament</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_activity_manage">Manage Player / Groups</string>
    <string name="manage_players">Players</string>
    <string name="manage_groups">Groups</string>
    <string name="title_activity_group">Group</string>
    <string name="player_edit_title">Edit Player</string>
    <string name="player_edit_fname_hint">First Name</string>
    <string name="player_edit_lname_hint">Last Name</string>
    <string name="player_edit_nickname_hint">Nickname</string>
    <string name="player_edit_number_hint">Number</string>
    <string name="group_edit_title">Edit Group</string>
    <string name="group_edit_group_name_hint">Group Name</string>
    <string name="player_delete_confirm_title">Delete this player?</string>
    <string name="player_delete_confirm_message">Statistics for this player will still remain</string>
    <string name="group_delete_confirm_message">Delete this group?</string>
    <string name="player_tab_title">Players</string>
    <string name="group_tab_title">Group</string>
    <string name="group_edit_error">Group Name Required</string>
    <string name="player_edit_error">First name, last name, or nickname required</string>
    <string name="add_group">Add Group</string>
    <string name="add_player">Add Player</string>

</resources>
