<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button 
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_take_stats"
        android:onClick="takeStats" />

    <Button 
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_view_stats" />

    <Button 
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_manage_players_groups"
        android:onClick="playerGroupActivity" />

</LinearLayout>
